...
const maskCenter = require('../../images/maskCenter.png');
const maskRight = require('../../images/maskRight.png');

class Onboarding extends React.Component<{}> {
  render() {
    // HACK: workaround for known issue with swiper + TabNavigator: https://github.com/leecade/react-native-swiper/issues/389
    return this.props.routeName === 'onboarding' ? (
      <View style={{flex: 1}} testID='onboarding'>
        <Swiper paginationStyle={{bottom: 95 * k}} dotColor={colors.GREY} activeDotColor={colors.PINK} bounces ref={r => (this.swiper = r)} autoplay autoplayTimeout={3} loop>
          <Slide bgImg={bg1} iconImg={footprints} left>
            {"See who's at your\r\nfavorite places!"}
          </Slide>
          <Slide bgImg={bg2} iconImg={discover} center>
...
    </View>
  );
};

const BypassButton = () => {
  return settings.isStaging || settings.isTesting ? (
    <TouchableOpacity onPress={Actions.testRegisterScene} style={styles.bypassButton} testID='bypassButton'>
      <RText color={colors.PINK}>Bypass</RText>
    </TouchableOpacity>
  ) : null;
};

const ButtonRow = () => (
...
