...
            style={styles.button}
            onPress={() => {
              Linking.openURL('app-settings:{1}');
            }}
          >
            <RText color='white' size={17.5}>
              Always Allow
            </RText>
          </TouchableOpacity>
          <TouchableOpacity style={[styles.button, styles.buttonCancel]} onPress={Actions.pop}>
            <RText color='white' size={17.5}>
              Cancel
            </RText>
...
