...
          }}
        />

        <TouchableOpacity
          onPress={onRegister}
          style={styles.buttonStyle}
          testID="bypassRegisterButton"
        >
          <RText style={styles.textStyle}>Next</RText>
        </TouchableOpacity>
      </View>
    )
  })
...
